--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
+    <title>West Stratford Builders Inc Status Page</title>
+</head>
+<body>
+    <p>Status</p>
+</body>
+</html>
