--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>West Stratford Builders Inc Status Page</title>
 </head>
 <body>
-    <p>Status</p>
-    <div>
-        <!---->
-    </div>
+    <p>Status (under construction)</p>
 </body>
 </html>
